# cattle_climate_simulator_env

./: CMakeLists.txt  README.md
config/: settings.json
include/cattle_climate/: env.hpp  formulas.hpp  settings.hpp  simulator.hpp
src/: env.cpp  formulas.cpp  main.cpp  settings.cpp  simulator.cpp
tests/: random_env_test.cpp
